--- a/src/app/pages/user-management/retailer/edit/retailer-edit.component.html
+++ b/src/app/pages/user-management/retailer/edit/retailer-edit.component.html
@@ -65,9 +65,9 @@
                 Area harus diisi.
               </mat-error>
             </mat-form-field> -->
-          <div fxLayout="row wrap" fxLayout.lt-md="column" class="py-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
+          <div fxLayout="row wrap" fxLayout.lt-md="column" class="py-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px" fxLayoutAlign="space-between stretch">
 
-            <mat-form-field fxFlex="12%" class="is-light form-primary">
+            <mat-form-field fxFlex="31%" class="is-light form-primary">
               <mat-select placeholder="National" formControlName="national">
                 <mat-option *ngFor="let item of listLevelArea" [value]="item.id">{{item.name}}</mat-option>
               </mat-select>
@@ -75,7 +75,7 @@
                 National harus diisi
               </mat-error>
             </mat-form-field>
-            <mat-form-field fxFlex="12%" class="is-light form-primary">
+            <mat-form-field fxFlex="31%" class="is-light form-primary">
               <mat-select placeholder="Zone" formControlName="zone" (selectionChange)="getAudienceArea('region', formRetailer.get('zone').value)">
                 <mat-option *ngFor="let item of list['zone']" [value]="item.id">{{item.name}}</mat-option>
               </mat-select>
@@ -83,7 +83,7 @@
                 Zone harus diisi
               </mat-error>
             </mat-form-field>
-            <mat-form-field fxFlex="12%" class="is-light form-primary">
+            <mat-form-field fxFlex="31%" class="is-light form-primary">
               <mat-select placeholder="Regional" formControlName="region" (selectionChange)="getAudienceArea('area', formRetailer.get('region').value)">
                 <mat-option *ngFor="let item of list['region']" [value]="item.id">{{item.name}}</mat-option>
               </mat-select>
@@ -91,7 +91,7 @@
                 Regional harus diisi
               </mat-error>
             </mat-form-field>
-            <mat-form-field fxFlex="12%" class="is-light form-primary">
+            <mat-form-field fxFlex="31%" class="is-light form-primary">
               <mat-select placeholder="Area" formControlName="area" (selectionChange)="getAudienceArea('salespoint', formRetailer.get('area').value)">
                 <mat-option *ngFor="let item of list['area']" [value]="item.id">{{item.name}}</mat-option>
               </mat-select>
@@ -99,7 +99,7 @@
                 Area harus diisi
               </mat-error>
             </mat-form-field>
-            <mat-form-field fxFlex="12%" class="is-light form-primary">
+            <mat-form-field fxFlex="31%" class="is-light form-primary">
               <mat-select placeholder="Salespoint" formControlName="salespoint" (selectionChange)="getAudienceArea('district', formRetailer.get('salespoint').value)">
                 <mat-option *ngFor="let item of list['salespoint']" [value]="item.id">{{item.name}}</mat-option>
               </mat-select>
@@ -107,7 +107,7 @@
                 Salespoint harus diisi
               </mat-error>
             </mat-form-field>
-            <mat-form-field fxFlex="12%" class="is-light form-primary">
+            <mat-form-field fxFlex="31%" class="is-light form-primary">
               <mat-select placeholder="District" formControlName="district" (selectionChange)="getAudienceArea('territory', formRetailer.get('district').value)">
                 <mat-option *ngFor="let item of list['district']" [value]="item.id">{{item.name}}</mat-option>
               </mat-select>
@@ -115,7 +115,7 @@
                 Distrik harus diisi
               </mat-error>
             </mat-form-field>
-            <mat-form-field fxFlex="12%" class="is-light form-primary">
+            <mat-form-field fxFlex="31%" class="is-light form-primary">
               <mat-select placeholder="Territory" formControlName="territory">
                 <mat-option *ngFor="let item of list['territory']" [value]="item.id">{{item.name}}</mat-option>
               </mat-select>
@@ -198,7 +198,7 @@
 
           <!-- <div fxLayout="row wrap" fxLayout.lt-md="column" class="py-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
   
-              <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-form-field fxFlex="31%" class="is-light form-primary">
                 <mat-select placeholder="National" formControlName="national">
                   <mat-option *ngFor="let item of listLevelArea" [value]="item.id">{{item.name}}</mat-option>
                 </mat-select>
@@ -206,7 +206,7 @@
                   National harus diisi
                 </mat-error>
               </mat-form-field>
-              <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-form-field fxFlex="31%" class="is-light form-primary">
                 <mat-select placeholder="Zone" formControlName="zone" (selectionChange)="getAudienceArea('region', formRetailer.get('zone').value)">
                   <mat-option *ngFor="let item of list['zone']" [value]="item.id">{{item.name}}</mat-option>
                 </mat-select>
@@ -214,7 +214,7 @@
                   Zone harus diisi
                 </mat-error>
               </mat-form-field>
-              <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-form-field fxFlex="31%" class="is-light form-primary">
                 <mat-select placeholder="Regional" formControlName="region" (selectionChange)="getAudienceArea('area', formRetailer.get('region').value)">
                   <mat-option *ngFor="let item of list['region']" [value]="item.id">{{item.name}}</mat-option>
                 </mat-select>
@@ -222,7 +222,7 @@
                   Regional harus diisi
                 </mat-error>
               </mat-form-field>
-              <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-form-field fxFlex="31%" class="is-light form-primary">
                 <mat-select placeholder="Area" formControlName="area" (selectionChange)="getAudienceArea('salespoint', formRetailer.get('area').value)">
                   <mat-option *ngFor="let item of list['area']" [value]="item.id">{{item.name}}</mat-option>
                 </mat-select>
@@ -230,7 +230,7 @@
                   Area harus diisi
                 </mat-error>
               </mat-form-field>
-              <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-form-field fxFlex="31%" class="is-light form-primary">
                 <mat-select placeholder="Salespoint" formControlName="salespoint" (selectionChange)="getAudienceArea('district', formRetailer.get('salespoint').value)">
                   <mat-option *ngFor="let item of list['salespoint']" [value]="item.id">{{item.name}}</mat-option>
                 </mat-select>
@@ -238,7 +238,7 @@
                   Salespoint harus diisi
                 </mat-error>
               </mat-form-field>
-              <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-form-field fxFlex="31%" class="is-light form-primary">
                 <mat-select placeholder="District" formControlName="district" (selectionChange)="getAudienceArea('territory', formRetailer.get('district').value)">
                   <mat-option *ngFor="let item of list['district']" [value]="item.id">{{item.name}}</mat-option>
                 </mat-select>
@@ -246,7 +246,7 @@
                   Distrik harus diisi
                 </mat-error>
               </mat-form-field>
-              <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-form-field fxFlex="31%" class="is-light form-primary">
                 <mat-select placeholder="Territory" formControlName="territory">
                   <mat-option *ngFor="let item of list['territory']" [value]="item.id">{{item.name}}</mat-option>
                 </mat-select>
