--- a/src/app/pages/user-management/retailer/edit/retailer-edit.component.html
+++ b/src/app/pages/user-management/retailer/edit/retailer-edit.component.html
@@ -68,7 +68,7 @@
           <div fxLayout="row wrap" fxLayout.lt-md="column" class="py-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px" fxLayoutAlign="space-between stretch">
 
             <mat-form-field fxFlex="31%" class="is-light form-primary">
-              <mat-select placeholder="National" formControlName="national">
+              <mat-select placeholder="National" formControlName="national" matTooltip="{{getToolTipData(formRetailer.get('national').value, listLevelArea)}}">
                 <mat-option *ngFor="let item of listLevelArea" [value]="item.id">{{item.name}}</mat-option>
               </mat-select>
               <mat-error *ngIf="formRetailer.controls['national'].hasError('required') && formRetailer.controls['national'].touched">
@@ -76,7 +76,7 @@
               </mat-error>
             </mat-form-field>
             <mat-form-field fxFlex="31%" class="is-light form-primary">
-              <mat-select placeholder="Zone" formControlName="zone" (selectionChange)="getAudienceArea('region', formRetailer.get('zone').value)">
+              <mat-select placeholder="Zone" formControlName="zone" matTooltip="{{getToolTipData(formRetailer.get('zone').value, list['zone'])}}" (selectionChange)="getAudienceArea('region', formRetailer.get('zone').value)">
                 <mat-option *ngFor="let item of list['zone']" [value]="item.id">{{item.name}}</mat-option>
               </mat-select>
               <mat-error *ngIf="formRetailer.controls['zone'].hasError('required') && formRetailer.controls['zone'].touched">
@@ -84,7 +84,7 @@
               </mat-error>
             </mat-form-field>
             <mat-form-field fxFlex="31%" class="is-light form-primary">
-              <mat-select placeholder="Regional" formControlName="region" (selectionChange)="getAudienceArea('area', formRetailer.get('region').value)">
+              <mat-select placeholder="Regional" formControlName="region" matTooltip="{{getToolTipData(formRetailer.get('region').value, list['region'])}}" (selectionChange)="getAudienceArea('area', formRetailer.get('region').value)">
                 <mat-option *ngFor="let item of list['region']" [value]="item.id">{{item.name}}</mat-option>
               </mat-select>
               <mat-error *ngIf="formRetailer.controls['region'].hasError('required') && formRetailer.controls['region'].touched">
@@ -92,7 +92,7 @@
               </mat-error>
             </mat-form-field>
             <mat-form-field fxFlex="31%" class="is-light form-primary">
-              <mat-select placeholder="Area" formControlName="area" (selectionChange)="getAudienceArea('salespoint', formRetailer.get('area').value)">
+              <mat-select placeholder="Area" formControlName="area" matTooltip="{{getToolTipData(formRetailer.get('area').value, list['area'])}}" (selectionChange)="getAudienceArea('salespoint', formRetailer.get('area').value)">
                 <mat-option *ngFor="let item of list['area']" [value]="item.id">{{item.name}}</mat-option>
               </mat-select>
               <mat-error *ngIf="formRetailer.controls['area'].hasError('required') && formRetailer.controls['area'].touched">
@@ -100,7 +100,7 @@
               </mat-error>
             </mat-form-field>
             <mat-form-field fxFlex="31%" class="is-light form-primary">
-              <mat-select placeholder="Salespoint" formControlName="salespoint" (selectionChange)="getAudienceArea('district', formRetailer.get('salespoint').value)">
+              <mat-select placeholder="Salespoint" formControlName="salespoint" matTooltip="{{getToolTipData(formRetailer.get('salespoint').value, list['salespoint'])}}" (selectionChange)="getAudienceArea('district', formRetailer.get('salespoint').value)">
                 <mat-option *ngFor="let item of list['salespoint']" [value]="item.id">{{item.name}}</mat-option>
               </mat-select>
               <mat-error *ngIf="formRetailer.controls['salespoint'].hasError('required') && formRetailer.controls['salespoint'].touched">
@@ -108,7 +108,7 @@
               </mat-error>
             </mat-form-field>
             <mat-form-field fxFlex="31%" class="is-light form-primary">
-              <mat-select placeholder="District" formControlName="district" (selectionChange)="getAudienceArea('territory', formRetailer.get('district').value)">
+              <mat-select placeholder="District" formControlName="district" matTooltip="{{getToolTipData(formRetailer.get('district').value, list['district'])}}" (selectionChange)="getAudienceArea('territory', formRetailer.get('district').value)">
                 <mat-option *ngFor="let item of list['district']" [value]="item.id">{{item.name}}</mat-option>
               </mat-select>
               <mat-error *ngIf="formRetailer.controls['district'].hasError('required') && formRetailer.controls['district'].touched">
@@ -116,7 +116,7 @@
               </mat-error>
             </mat-form-field>
             <mat-form-field fxFlex="31%" class="is-light form-primary">
-              <mat-select placeholder="Territory" formControlName="territory">
+              <mat-select placeholder="Territory" formControlName="territory" matTooltip="{{getToolTipData(formRetailer.get('territory').value, list['territory'])}}">
                 <mat-option *ngFor="let item of list['territory']" [value]="item.id">{{item.name}}</mat-option>
               </mat-select>
               <mat-error *ngIf="formRetailer.controls['territory'].hasError('required') && formRetailer.controls['territory'].touched">
